[project]
name = "supply-chain-env"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.3",
    "openai>=2.30.0",
    "openenv-core>=0.2.0",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "pyyaml>=6.0.3",
    "uvicorn>=0.43.0",
]

[project.scripts]
server = "server.app:app"
